--- a/recipe/index.html
+++ b/recipe/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Tomato Sandwiches</title>
   </head>
   <body>
