Limited description to the same width as photo.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -12,7 +12,7 @@
     <div class="top">
       <h1>Tomato Sandwiches</h1>
 
-      <p>When I was a kid, my family grew an abundance of tomatos every summer in the backyard. If one of us asked what we should eat for lunch, the suggestion was invariably "a tomato sandwich!"</p>
+      <p class="description">When I was a kid, my family grew an abundance of tomatos every summer in the backyard. If one of us asked what we should eat for lunch, the suggestion was invariably "a tomato sandwich!"</p>
     </div>
 
     <div class="left">
