Updated stylings to include lists in font and text color and added headers to ingredients and steps.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -24,6 +24,7 @@
       </div>
 
       <div>
+        <h2>Ingredients</h2>
         <ul>
           <li>2 slices of sandwich bread</li>
           <li>1 tbs mayo</li>
@@ -38,6 +39,7 @@
 
     <div class="right">
       <div>
+        <h2>Steps</h2>
         <ol>
           <li>Place cheese on one slice of bread and then toast both slices of bread for 1-2 minutes.</li>
           <li>Spread mayo on the slice without cheese.</li>
