Added stylings to ingredients and steps sections.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -23,7 +23,7 @@
         </p>
       </div>
 
-      <div>
+      <div class="ingredients">
         <h2>Ingredients</h2>
         <ul>
           <li>2 slices of sandwich bread</li>
@@ -38,7 +38,7 @@
     </div>
 
     <div class="right">
-      <div>
+      <div class="steps">
         <h2>Steps</h2>
         <ol>
           <li>Place cheese on one slice of bread and then toast both slices of bread for 1-2 minutes.</li>
