Created a function that will add checkboxes to each ingredient item while also adding ingredients to the list dynamically.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <script src="javascript.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,13 +26,6 @@
       <div class="ingredients">
         <h2>Ingredients</h2>
         <ul>
-          <li>2 slices of sandwich bread</li>
-          <li>1 tbs mayo</li>
-          <li>1 deli cut of sharp cheddar</li>
-          <li>1 large slice of beefsteak tomato</li>
-          <li>5-7 fresh basil leaves</li>
-          <li>salt to taste</li>
-          <li>pepper to taste</li>
         </ul>
       </div>
     </div>
@@ -42,7 +34,7 @@
       <div class="steps">
         <h2>Steps</h2>
         <ol>
-          <li>Place cheese on one slice of bread and then toast both slices of bread for 1-2 minutes.</li>
+          <li id="test">Place cheese on one slice of bread and then toast both slices of bread for 1-2 minutes.</li>
           <li>Spread mayo on the slice without cheese.</li>
           <li>Lay basil over the mayo.</li>
           <li>Lay tomato slice on top of the basil and add the salt and pepper on top of the mayo.</li>
@@ -60,4 +52,5 @@
       </div>
     </div>
   </body>
+  <script src="javascript.js"></script>
 </html>
