--- a/recipe/index.html
+++ b/recipe/index.html
@@ -2,21 +2,23 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Tomato Sandwiches</title>
   </head>
   <body>
-    <div class="top">
+    <div class="top col-xs-12">
       <h1>Tomato Sandwiches</h1>
 
       <p class="description">When I was a kid, my family grew an abundance of tomatos every summer in the backyard. If one of us asked what we should eat for lunch, the suggestion was invariably "a tomato sandwich!"</p>
     </div>
 
-    <div class="left">
+    <div class="left col-xs-12">
       <div>
         <img src="images/tomatosandwich.jpg" width="600px" alt="A picture of a slice of cheese on top of a piece of lettuce, surrounded by cherry tomatos and a sprig of basil.">
         <p>Photo credit: 
@@ -31,7 +33,7 @@
       </div>
     </div>
 
-    <div class="right">
+    <div class="right col-xs-12">
       <div class="steps">
         <h2>Steps</h2>
         <ol>
@@ -54,4 +56,7 @@
     </div>
   </body>
   <script src="javascript.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
