Added navbar and basic stylings.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -12,6 +12,28 @@
     <title>Tomato Sandwiches</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#" id="title"><h2>Thane's Recipe Page</h2></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="navbar-brand">Similar Recipes:</li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.julieseatsandtreats.com/deviled-egg-salad-sandwiches/">Deviled Egg Salad Sandwich</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://thefoodcharlatan.com/b-l-a-t-bacon-lettuce-avocado-tomato-sandwich-with-aioli-sauce-and-feta/">Best BLT</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.billyparisi.com/tomato-soup-recipe-and-grilled-cheese-with-prosciutto/">Tomato Soup and Grilled Cheese</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
     <div class="top col-xs-12">
       <h1>Tomato Sandwiches</h1>
 
@@ -28,7 +50,7 @@
 
       <div class="ingredients">
         <h2>Ingredients</h2>
-        <ul>
+        <ul id="ingredient-list">
         </ul>
       </div>
     </div>
@@ -43,15 +65,6 @@
           <li>Lay tomato slice on top of the basil and add the salt and pepper on top of the mayo.</li>
           <li>Add the top slice of the sandwich and enjoy!</li>
         </ol>
-      </div>
-
-      <div>
-        <p>Similar recipes:</p>
-        <p>
-          <a href="https://www.julieseatsandtreats.com/deviled-egg-salad-sandwiches/">Deviled Egg Salad Sandwich</a>
-          <a href="https://thefoodcharlatan.com/b-l-a-t-bacon-lettuce-avocado-tomato-sandwich-with-aioli-sauce-and-feta/">Best BLT</a>
-          <a href="https://www.billyparisi.com/tomato-soup-recipe-and-grilled-cheese-with-prosciutto/">Tomato Soup and Grilled Cheese</a>
-        </p>
       </div>
     </div>
   </body>
