--- a/recipe/index.html
+++ b/recipe/index.html
@@ -12,11 +12,8 @@
     <title>Tomato Sandwiches</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
       <a class="navbar-brand" href="#" id="title"><h2>Thane's Recipe Page</h2></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
     
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -34,37 +31,35 @@
       </div>
     </nav>
 
-    <div class="top col-xs-12">
-      <h1>Tomato Sandwiches</h1>
+    <div class="main-body">
+      <div class="blurb">
+        <h1>Tomato Sandwiches</h1>
 
-      <p class="description">When I was a kid, my family grew an abundance of tomatos every summer in the backyard. If one of us asked what we should eat for lunch, the suggestion was invariably "a tomato sandwich!"</p>
-    </div>
+        <p class="description">When I was a kid, my family grew an abundance of tomatos every summer in the backyard. If one of us asked what we should eat for lunch, the suggestion was invariably "a tomato sandwich!"</p>
 
-    <div class="left col-xs-12">
-      <div>
         <img src="images/tomatosandwich.jpg" width="600px" alt="A picture of a slice of cheese on top of a piece of lettuce, surrounded by cherry tomatos and a sprig of basil.">
-        <p>Photo credit: 
+        <p id="credit">Photo credit: 
           <a href="https://unsplash.com/photos/red-tomato-beside-yellow-cheese-xkgTb0qgzaA">Önder Örtel</a>
         </p>
       </div>
 
-      <div class="ingredients">
-        <h2>Ingredients</h2>
-        <ul id="ingredient-list">
-        </ul>
-      </div>
-    </div>
+      <div class="instructions">
+        <div class="ingredients">
+          <h2>Ingredients</h2>
+          <ul id="ingredient-list">
+          </ul>
+        </div>
 
-    <div class="right col-xs-12">
-      <div class="steps">
-        <h2>Steps</h2>
-        <ol>
-          <li id="test">Place cheese on one slice of bread and then toast both slices of bread for 1-2 minutes.</li>
-          <li>Spread mayo on the slice without cheese.</li>
-          <li>Lay basil over the mayo.</li>
-          <li>Lay tomato slice on top of the basil and add the salt and pepper on top of the mayo.</li>
-          <li>Add the top slice of the sandwich and enjoy!</li>
-        </ol>
+        <div class="steps">
+          <h2>Steps</h2>
+          <ol>
+            <li id="test">Place cheese on one slice of bread and then toast both slices of bread for 1-2 minutes.</li>
+            <li>Spread mayo on the slice without cheese.</li>
+            <li>Lay basil over the mayo.</li>
+            <li>Lay tomato slice on top of the basil and add the salt and pepper on top of the mayo.</li>
+            <li>Add the top slice of the sandwich and enjoy!</li>
+          </ol>
+        </div>
       </div>
     </div>
   </body>
