Reworked CSS to be more readable and less redundant as well as doing as much in flexbox as possible.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -85,13 +85,12 @@
         </p>
       </div>
 
-      <div class="instructions">
-        <div class="ingredients">
+        <div class="ingredients instructions">
           <h2>Ingredients</h2>
           <ul id="ingredient-list"></ul>
         </div>
 
-        <div class="steps">
+        <div class="steps instructions">
           <h2>Steps</h2>
           <ol>
             <li id="test">
