Reorganized CSS so it's more readable.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -85,12 +85,12 @@
         </p>
       </div>
 
-        <div class="ingredients instructions">
+        <div class="instructions">
           <h2>Ingredients</h2>
           <ul id="ingredient-list"></ul>
         </div>
 
-        <div class="steps instructions">
+        <div class="instructions">
           <h2>Steps</h2>
           <ol>
             <li id="test">
