Flex containers now shrink and grow as intended.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -85,6 +85,7 @@
         </p>
       </div>
 
+      <div class="instructions-container">
         <div class="instructions">
           <h2>Ingredients</h2>
           <ul id="ingredient-list"></ul>
@@ -93,7 +94,7 @@
         <div class="instructions">
           <h2>Steps</h2>
           <ol>
-            <li id="test">
+            <li>
               Place cheese on one slice of bread and then toast both slices of
               bread for 1-2 minutes.
             </li>
