Added hidden link element that displays when the navbar is too small to show links.

--- a/recipe/index.html
+++ b/recipe/index.html
@@ -62,6 +62,7 @@
 
     <!--container for the main body of the page-->
     <div class="main-body">
+      <!--container for title, description, image, and image credit-->
       <div class="blurb">
         <h1>Tomato Sandwiches</h1>
 
@@ -85,6 +86,7 @@
         </p>
       </div>
 
+      <!--container for holding the ingredients and steps-->
       <div class="instructions-container">
         <div class="instructions">
           <h2>Ingredients</h2>
@@ -108,6 +110,29 @@
           </ol>
         </div>
       </div>
+
+      <!--hidden class to display links on small devices-->
+      <ul class="hidden-links">
+        <li>Similar Recipes:</li>
+        <li>
+          <a
+            href="https://www.julieseatsandtreats.com/deviled-egg-salad-sandwiches/"
+            >Deviled Egg Salad Sandwich</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://thefoodcharlatan.com/b-l-a-t-bacon-lettuce-avocado-tomato-sandwich-with-aioli-sauce-and-feta/"
+            >Best BLT</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.billyparisi.com/tomato-soup-recipe-and-grilled-cheese-with-prosciutto/"
+            >Tomato Soup and Grilled Cheese</a
+          >
+        </li>
+      </ul>
     </div>
   </body>
 
