Added background color and basic scaffolding for website structure.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,14 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Portfolio</title>
   </head>
   <body>
-    <!-- section for photo -->
-    <!-- section for description -->
-    <!-- section for work experience -->
-    <!-- section for education -->
-    <!-- section for social media links -->
-    <!-- section for contact info -->
+    <title>THANE WILSON - SOFTWARE ENGINEER</title>
+    <section>experience section</section>
+    <section>education section</section>
+    <section>about section</section>
+    <section>projects section</section>
+    <section>social media links</section>
+    <section>contact information section</section>
+    <img src="" alt="eventually a picture of me">
   </body>
+  <script src="javascript.js"></script>
 </html>
