Added all sections and updated html to be clearer.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,20 +1,50 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Portfolio</title>
   </head>
   <body>
-    <title>THANE WILSON - SOFTWARE ENGINEER</title>
-    <section>experience section</section>
-    <section>education section</section>
-    <section>about section</section>
-    <section>projects section</section>
-    <section>social media links</section>
-    <section>contact information section</section>
-    <img src="" alt="eventually a picture of me">
+    <header><h1>THANE WILSON - SOFTWARE ENGINEER</h1></header>
+    <section class="social-media">
+      <ul>
+        <li>linkedin</li>
+        <li>github</li>
+        <li>twitter</li>
+      </ul>
+    </section>
+    <section class="skills">
+      <h2>skills</h2>
+      <ul>
+        proficient in:
+        <li>HTML & CSS</li>
+        <li>Git & GitHub</li>
+        <li>JavaScript</li>
+        <li>Ruby</li>
+        <li>Python</li>
+      </ul>
+      <ul>
+        languages:
+        <li>English (native)</li>
+        <li>American Sign Language (conversational)</li>
+      </ul>
+    </section>
+    <section>
+      <h2>projects</h2>
+      <ul>
+        <li>insert projects here</li>
+      </ul>
+    </section>
+    <section class="contact">
+      <h3>contact me</h3>
+    </section>
+    <section class="about">
+      <h3>about</h3>
+      <p>here is a short blurb about me</p>
+      <img src="" alt="eventually a picture of me" />
+    </section>
   </body>
   <script src="javascript.js"></script>
 </html>
