Added desired google fonts, background colors, and basic flex.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,19 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cantarell&family=Julius+Sans+One&family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <title>Portfolio</title>
   </head>
   <body>
     <header><h1>THANE WILSON - SOFTWARE ENGINEER</h1></header>
-    <section class="social-media">
+    <section class="bubble social-media">
       <ul>
         <li>linkedin</li>
         <li>github</li>
         <li>twitter</li>
       </ul>
     </section>
-    <section class="skills">
+    <section class="bubble skills">
       <h2>skills</h2>
       <ul>
         proficient in:
@@ -37,7 +43,7 @@
         <li>insert projects here</li>
       </ul>
     </section>
-    <section class="contact">
+    <section class="bubble contact">
       <h3>contact me</h3>
     </section>
     <section class="about">
