Added initial grid layout.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
         <li>American Sign Language (conversational)</li>
       </ul>
     </section>
-    <section>
+    <section class="projects">
       <h2>projects</h2>
       <ul>
         <li>insert projects here</li>
