Refined grid layout and reorganized css and html.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,44 +13,44 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header><h1>THANE WILSON - SOFTWARE ENGINEER</h1></header>
-    <section class="bubble social-media">
-      <ul>
-        <li>linkedin</li>
-        <li>github</li>
-        <li>twitter</li>
-      </ul>
-    </section>
-    <section class="bubble skills">
-      <h2>skills</h2>
-      <ul>
-        proficient in:
-        <li>HTML & CSS</li>
-        <li>Git & GitHub</li>
-        <li>JavaScript</li>
-        <li>Ruby</li>
-        <li>Python</li>
-      </ul>
-      <ul>
-        languages:
-        <li>English (native)</li>
-        <li>American Sign Language (conversational)</li>
-      </ul>
-    </section>
-    <section class="projects">
-      <h2>projects</h2>
-      <ul>
-        <li>insert projects here</li>
-      </ul>
-    </section>
-    <section class="bubble contact">
-      <h3>contact me</h3>
-    </section>
-    <section class="about">
-      <h3>about</h3>
-      <p>here is a short blurb about me</p>
-      <img src="" alt="eventually a picture of me" />
-    </section>
+    <div class="main-container">
+      <header><h1>THANE WILSON - SOFTWARE ENGINEER</h1></header>
+      <section class="bubble social-media">
+        <ul class="links">
+          <li><img class="icon" /></li>
+          <li><img class="icon" /></li>
+          <li><img class="icon" /></li>
+        </ul>
+      </section>
+      <section class="bubble skills">
+        <h3>Skills</h3>
+        <ul>
+          <li>HTML & CSS</li>
+          <li>Git & GitHub</li>
+          <li>JavaScript</li>
+          <li>Ruby</li>
+          <li>Python</li>
+        </ul>
+        <ul>
+          <li>English (native)</li>
+          <li>American Sign Language (conversational)</li>
+        </ul>
+      </section>
+      <section class="projects">
+        <h2>projects</h2>
+        <ul>
+          <li>insert projects here</li>
+        </ul>
+      </section>
+      <section class="bubble contact">
+        <h3>contact me</h3>
+        <a>email@email.com</a>
+      </section>
+      <section class="about">
+        <p>here is a short blurb about me</p>
+        <img id="headshot" src="" />
+      </section>
+    </div>
   </body>
   <script src="javascript.js"></script>
 </html>
