Added a text area to contact form that wraps text correctly.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,7 +30,14 @@
       </section>
       <section class="bubble contact">
         <h3>contact me</h3>
-        <a>email@email.com</a>
+        <form
+          class="contact-form"
+          method="POST"
+          action="mailto: tmoonder@gmail.com"
+          enctype="multipart/form-data"
+        >
+          <textarea id="message" /></textarea>
+        </form>
       </section>
       <section id="about">
         <img id="headshot" src="" />
