--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -29,7 +29,7 @@
         <h2>projects</h2>
       </section>
       <section class="bubble contact">
-        <h3>contact me</h3>
+        <h3 id="contact-header">contact me</h3>
         <form
           class="contact-form"
           method="POST"
@@ -37,6 +37,7 @@
           enctype="multipart/form-data"
         >
           <textarea id="message" /></textarea>
+          <input type="submit" value="send" id="send"></submit>
         </form>
       </section>
       <section id="about">
