Added styling to send button.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -37,7 +37,7 @@
           enctype="multipart/form-data"
         >
           <textarea id="message" /></textarea>
-          <input type="submit" value="send" id="send"></submit>
+          <input type="submit" value="SEND" id="send"></submit>
         </form>
       </section>
       <section id="about">
