Send event now opens an email window with default subject and custom message.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -30,12 +30,7 @@
       </section>
       <section class="bubble contact">
         <h3 id="contact-header">contact me</h3>
-        <form
-          class="contact-form"
-          method="POST"
-          action="mailto: tmoonder@gmail.com"
-          enctype="multipart/form-data"
-        >
+        <form id="contact-form">
           <textarea id="message" /></textarea>
           <input type="submit" value="SEND" id="send"></submit>
         </form>
