--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@
         </form>
       </section>
       <section id="about">
-        <img id="headshot" src="" />
+        <img id="headshot" src="images/profile.jpg" />
       </section>
     </div>
   </body>
