--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,9 +17,9 @@
       <header><h1>THANE WILSON - SOFTWARE ENGINEER</h1></header>
       <section class="bubble social-media">
         <ul class="links">
-          <li><img class="icon" /></li>
-          <li><img class="icon" /></li>
-          <li><img class="icon" /></li>
+          <li><img class="icon" src="images/linkedin.jpg"/></li>
+          <li><img class="icon" src="images/x.jpg"></li>
+          <li><img class="icon" src="images/github.jpg"/></li>
         </ul>
       </section>
       <section class="bubble skills">
