Designed a display class for project links.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cantarell&family=Julius+Sans+One&family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cantarell&family=Julius+Sans+One&family=Poppins&display=swap&family=Bungee+Shade"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="styles.css" />
