Changed main font and aligned text correctly.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Cantarell&family=Poppins&display=swap&family=Bungee+Shade&family=Bungee+Inline"
+      href="https://fonts.googleapis.com/css2?&family=Bungee+Shade&family=Bungee+Inline&family=M+PLUS+Code+Latin"
       rel="stylesheet"
     />
     <link rel="stylesheet" type="text/css" href="styles.css" />
