Incorporated name field into form submission event.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,7 +33,7 @@
           <label for="message">Message</label>
           <textarea id="message"></textarea>
           <label for="name">Name</label>
-          <textarea id="name"></textarea>
+          <textarea id="name" required></textarea>
           <input type="submit" value="SEND" id="send"></submit>
         </form>
       </section>
