Manually reverted form changes to fix accidental branch deletion.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -31,7 +31,7 @@
         <h3 id="contact-header">contact me</h3>
         <form id="contact-form">
           <label for="message">Message</label>
-          <textarea id="message"></textarea>
+          <textarea id="message" /></textarea>
           <label for="name">Name</label>
           <textarea id="name" required></textarea>
           <input type="submit" value="SEND" id="send"></submit>
