--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,9 +17,9 @@
       <header><h1>THANE WILSON - SOFTWARE ENGINEER</h1></header>
       <section class="bubble social-media">
         <ul class="links">
-          <li><a href="https://www.linkedin.com/in/thanewilson/"><img class="icon" src="images/linkedin.jpg"/></a></li>
-          <li><a href="https://x.com/thaneofanything"><img class="icon" src="images/x.jpg"></a></li>
-          <li><a href="https://github.com/themagicianking"><img class="icon" src="images/github.jpg"/></a></li>
+          <li><a href="https://www.linkedin.com/in/thanewilson/" target="_blank"><img class="icon" src="images/linkedin.jpg"/></a></li>
+          <li><a href="https://x.com/thaneofanything" target="_blank"><img class="icon" src="images/x.jpg"></a></li>
+          <li><a href="https://github.com/themagicianking" target="_blank"><img class="icon" src="images/github.jpg"/></a></li>
         </ul>
       </section>
       <section class="bubble skills">
