Refactored the drop row function into pullPiecesIntoRow, which now works as intended. Added CSS dynamically to display the grid and drop pieces on a timer.

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <header><h1>TETRIS</h1></header>
-      <div class="puzzle-container"></div>
+      <div id="puzzle-container"></div>
     </main>
   </body>
   <script src="javascript.js"></script>
