--- a/tetris-in-react/index.html
+++ b/tetris-in-react/index.html
@@ -11,9 +11,9 @@
     <main>
       <header><h1>TETRIS</h1></header>
       <div id="puzzle-container"></div>
-      <div id="score-container"></div>
     </main>
-    <!-- <script type="module" src="/src/main.jsx"></script> -->
+    <div id="top-five-scores"></div>
+    <script type="module" src="/src/main.jsx"></script>
     <script type="module" src="/javascript.js"></script>
   </body>
 </html>
