Created a GetShapesDropped component that updates the interface every half second.

--- a/tetris-in-react/index.html
+++ b/tetris-in-react/index.html
@@ -14,6 +14,6 @@
     </main>
     <div id="top-five-scores"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/javascript.js"></script>
+    <script type="module" src="/javascript.jsx"></script>
   </body>
 </html>
